[tool.poetry]
name = "youloader"
version = "0.1.0"
description = ""
authors = ["Gutinnho <glunardi99@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
youloader = 'youloader.main:main' 

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
validators = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
